  just shift-left click on the element and you can manipulate only that element. Unchecking the 'Group elements together' flag disable this feature for this collection.

- ctrl+mouse wheel zooms in/out. The old way of using ctrl+left click for zooming in and ctrl+right click for zooming out is still possible.

- extend right click behavior for multi-select to hidden items

- the property menu can now be a floating window (old behavior can be restored in the editor options)
  
- remove old shadowing code and replace it with optional screen space ambient occlusion (via the global video preferences and also the table options)

- its not necessary anymore to manually override the texture filtering quality in the global gfx cards options (NVIDIA control panel, etc)
  if you need HQ filtering, please only use the checkbox in the VP video preferences instead

- new 4x Anti-Aliasing mode that does brute force oversampling
  (can optionally be combined with VPs builtin FXAA or the control panel FXAA/SMAA/etc for even more smoothing)

- add third mode for FXAA: extreme (and retweak the quality FXAA mode)

- adaptive vsync works again, it will disable vsync automatically if FPS drop below monitor refresh rate (not on windows XP though due to missing functionality there)
  enable it by setting the FPS Limiter to 2 (1 will still be using 'real' VSync and any number above the monitor refresh rate (usually 60Hz) will just limit the FPS)

- optional texture compression to save some gfx video memory (at the cost of rendering quality and loading time)
  (for now the textures have to be a multiple of 4 in both x & y resolution to make them compressable.
   this can be abused though to 'disable' texture compression on certain critical textures by making them -not- a multiple of 4)

- support primitive vertex sizes > 65535 and redo primitive drawing in the editor-UI 
  (there is now a new setting for each primitive, set to 0 to switch to the old approximate drawing mode (usually fast),